# dfseo-cli

./: Dfseo-CLI-openclaw-skill.md  Dfseo-agent-plan.md  LICENSE  MANIFEST.in  PYPI-TODO.md  README.md  SKILL.md  dfseo-CLI 1.3.md  dfseo-CLI spec.md  dfseo-CLI-landing-brief.md  dfseo-CLI-pypi-brief.md  dfseo-CLI-spec-v1.1.md  dfseo-CLI-spec-v1.2.md  pyproject.toml
docs/: dataforSEO-docs.md
landing/: index.html
skill/: SKILL.md
skill/examples/: competitor-audit.md  content-analysis.md  full-seo-audit.md  keyword-gap.md  keyword-research.md  link-building.md
skill/references/: content.md  domain.md  keywords.md  serp.md  site.md
src/dfseo/: __init__.py  banner.py  cli.py  client.py  config.py  models.py  output.py  polling.py  pricing.py  validation.py
src/dfseo/commands/: __init__.py  auth.py  backlinks.py  backlinks.py.bak  config.py  content.py  describe.py  domain.py  keywords.py  keywords.py.bak  serp.py  site.py
tests/: __init__.py  test_backlinks.py  test_client.py  test_keywords.py  test_serp.py  test_site.py
tests/fixtures/: auth_error_response.json  bing_serp_response.json  google_ads_suggestions_response.json  google_ads_volume_response.json  google_serp_response.json  insufficient_balance_response.json  keyword_difficulty_response.json  keyword_suggestions_response.json  keyword_volume_response.json  keywords_for_site_response.json  languages_response.json  locations_response.json  rate_limit_response.json  search_intent_response.json  user_data_response.json  youtube_serp_response.json
