[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfseo"
version = "1.0.0"
description = "DataForSEO CLI for AI Agents - SERP data from your terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ricc", email = "ricc@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
dfseo = "dfseo.cli:main"

[project.urls]
Homepage = "https://github.com/example/dfseo-cli"
Documentation = "https://github.com/example/dfseo-cli#readme"
Repository = "https://github.com/example/dfseo-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dfseo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
