[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfseo"
version = "1.0.0"
description = "DataForSEO CLI for AI agents — SERP, Keywords, Site Audit, Backlinks from your terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ricc", email = "riccsartori@gmail.com"}
]
keywords = [
    "seo", "cli", "dataforseo", "serp", "keywords", "backlinks",
    "site-audit", "ai-agents", "agent-native", "keyword-research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=6.0.0",
]

[project.scripts]
dfseo = "dfseo.cli:cli_main"

[project.urls]
Homepage = "https://github.com/ricca91/dfseo-cli"
Documentation = "https://github.com/ricca91/dfseo-cli#readme"
Repository = "https://github.com/ricca91/dfseo-cli"
Issues = "https://github.com/ricca91/dfseo-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dfseo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
